new plots, small improvements everywhere, markdown metadata

--- a/src/data_preprocessing.ipynb
+++ b/src/data_preprocessing.ipynb
@@ -284,114 +284,9 @@
     "germany_data[\"year\"] = germany_data[\"year_week\"].apply(get_year)\n",
     "germany_data[\"week\"] = germany_data[\"year_week\"].apply(get_week)\n",
     "germany_data.drop(\"year_week\", axis=1,inplace=True)\n",
-    "# \n",
+    "# create a time column for comparable time values\n",
     "germany_data[\"time\"] = germany_data[\"year\"] + germany_data[\"week\"]/53\n",
     "\n",
-    "germany_data.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Remove bad values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tests_done</th>\n",
-       "      <th>positivity_rate</th>\n",
-       "      <th>year</th>\n",
-       "      <th>week</th>\n",
-       "      <th>time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5031</th>\n",
-       "      <td>69493</td>\n",
-       "      <td>1.300850</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2020.188679</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5032</th>\n",
-       "      <td>129291</td>\n",
-       "      <td>4.977918</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2020.207547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5033</th>\n",
-       "      <td>374534</td>\n",
-       "      <td>5.981566</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2020.226415</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5034</th>\n",
-       "      <td>377599</td>\n",
-       "      <td>8.996051</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2020.245283</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5035</th>\n",
-       "      <td>417646</td>\n",
-       "      <td>8.632430</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2020.264151</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      tests_done  positivity_rate  year  week         time\n",
-       "5031       69493         1.300850  2020    10  2020.188679\n",
-       "5032      129291         4.977918  2020    11  2020.207547\n",
-       "5033      374534         5.981566  2020    12  2020.226415\n",
-       "5034      377599         8.996051  2020    13  2020.245283\n",
-       "5035      417646         8.632430  2020    14  2020.264151"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# remove NaN values\n",
-    "germany_data = germany_data.dropna()\n",
     "germany_data.head()"
    ]
   },
